[package]
name = "webru"
version = "0.1.0"
edition = "2021"
description = "Frequently used javascript functions for Rust and WebAssembly"
license = "MIT OR Apache-2.0"
author = "KR Shanto <khalilorrahman2005@gmail.com>"
keywords = ["Webassembly", "web-sys", "web"]
repository = "https://github.com/Shanto2005/webru"
homepage = "https://github.com/Shanto2005/webru"
readme = "README.md"
documentation = "https://docs.rs/webru"
categories = ["web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = {version = "0.3.56", features = ["HtmlCollection", "NodeList", "Document", "Node", "Element", "HtmlElement", "CssStyleDeclaration"]}
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
weblog = '0.3.0'
rand = "0.8.5"
getrandom = {version = "0.2.5", features = ["js"]}
uuid = { version = "0.8", features = [  "v1", "v4", "wasm-bindgen"] }
gloo-storage = "0.2.0"
yew = "0.19.3"
yew-router = "0.16"

[dev-dependencies]
wasm-bindgen-test = "0.3.29"