[package]
name = "webru"
version = "0.3.0"
edition = "2021"
description = "Frequently used javascript functions for Rust and WebAssembly"
license = "MIT OR Apache-2.0"
author = "KR Shanto <khalilorrahman2005@gmail.com>"
keywords = ["Webassembly", "web-sys", "web"]
repository = "https://github.com/Shanto2005/webru"
homepage = "https://github.com/Shanto2005/webru"
readme = "README.md"
documentation = "https://docs.rs/webru"
categories = ["wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = {version = "0.3.56", features = [
    "HtmlCollection", 
    "NodeList", 
    "Document", 
    "Node", 
    "Element",
    "HtmlElement", 
    "CssStyleDeclaration", 
    "Window", 
    "Location",
    "MediaQueryListEvent",
    "MediaQueryList"
]}
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
weblog = '0.3.0'

[dev-dependencies]
wasm-bindgen-test = "0.3.29"